tests/baselines/reference/switchCaseWithIntersectionTypes01.errors.txt
tests/cases/conformance/types/typeRelationships/comparable/switchCaseWithIntersectionTypes01.ts(18,10): error TS2678: Type '(数字 & 为真) | (数字 & 为假)' is not comparable to type '文字 & 数字'.
  Type '数字 & 为假' is not comparable to type '文字 & 数字'.
    Type '数字 & 为假' is not comparable to type '文字'.
tests/cases/conformance/types/typeRelationships/comparable/switchCaseWithIntersectionTypes01.ts(22,10): error TS2678: Type '真假' is not comparable to type '文字 & 数字'.


==== tests/cases/conformance/types/typeRelationships/comparable/switchCaseWithIntersectionTypes01.ts (2 errors) ====
    var strAndNum: string & number;
    var numAndBool: number & boolean;
    var str: string;
    var num: number;
    var bool: boolean;
    
    switch (strAndNum) {
        // Identical
        case strAndNum:
            break;
    
        // Constituents
        case str:
        case num:
            break;
    
        // Overlap in constituents
        case numAndBool:
             ~~~~~~~~~~
!!! error TS2678: Type '(数字 & 为真) | (数字 & 为假)' is not comparable to type '文字 & 数字'.
!!! error TS2678:   Type '数字 & 为假' is not comparable to type '文字 & 数字'.
!!! error TS2678:     Type '数字 & 为假' is not comparable to type '文字'.
            break;
    
        // No relation
        case bool:
             ~~~~
!!! error TS2678: Type '真假' is not comparable to type '文字 & 数字'.
            break;
    }